<resources>
    <string name="app_name">GoHiking!</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="action_trailsearch">Search Trails</string>
    <string name="action_friends">Friends</string>
    <string name="action_groupsearch">Groups</string>
    <string name="action_login">Login</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_logout">Logout</string>


</resources>