...

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/zipSearch">

            <TextView
                android:id="@+id/ziptext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
...
