...
            android:textColor="@color/white"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/trailname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="title"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seereview_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/brown"
        android:text="See Reviews"
        android:textColor="@color/white"
...
